[package]
name = "file-uti"
version = "0.1.0"
edition = "2021"
description = "Rust crate to get the UTI (Uniform Type Identifier) of a file on macOS"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
